# chatbot_4bis

./: 4bis_main.py  config.py  fsm.py  keyboards.py  main.py  pyproject.toml  reqs.py  requirements.txt  secret.txt  states.py
stickers/: sticker_CAACAgIAAxkBAANZX3CWLYpB3cZ2rFOO0m0VjNrQaMYAAkEBAAJWnb0KhKjbqEtmXDcbBA.TGS
