[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Lev Pikulev <pikulev.l.v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.11.2"
asyncio = "^3.4.3"
loguru = "^0.5.3"
requests = "^2.25.0"
requests-toolbelt = "^0.9.1"
aiohttp = "^3.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
